# nometa

./: .gitignore  README.md
bruno/: bruno.json  user (Auth User).bru  user (Create User).bru
nometa-db/nometa/: users.sql
nometa-server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
nometa-server/db/: run_migrations.sh
nometa-server/db/scripts/: 00_create_schema.sql  01_create_app_user.sh
nometa-server/src/: main.rs
nometa-server/src/errors/: mod.rs
nometa-server/src/models/: mod.rs  user.rs
nometa-server/src/repository/: user.rs
nometa-server/src/respository/: mod.rs  user_repo.rs
nometa-server/src/routes/: mod.rs  user.rs  user_routes.rs
nometa-server/src/utils/: crypto.rs  database.rs  mod.rs  redis.rs
nometa-ui/: README.md  index.html  package-lock.json  package.json
nometa-ui/src/: App.vue
nometa-ui/src/assets/: base.css  main.css
nometa-ui/src/components/: PageHeader.vue  TerminalText.vue
nometa-ui/src/router/: index.ts
nometa-ui/src/views/: HelloWorld.vue  Home.vue  HomeView.vue
