[package]
name = "nometa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = "0.5.3"
dotenvy = "0.15.7"
envy = "0.4.2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls", "time"] }
time = { version = "0.3.41", features = ["serde"] }
tokio = "1.47.1"
